--- a/html-css/style-estructura.css
+++ b/html-css/style-estructura.css
@@ -1,5 +1,9 @@
-body{
+body {
+
+}
+.principal{
     background: #CCCCCC;
+    padding: 20px;
 }
 
 #banner{
@@ -20,4 +24,28 @@ em strong{
 
 #mision{
     font-size: 20px;
+}
+
+.diferenciales{
+    background: #FFFFFF;
+    padding: 30px;
+}
+
+h2{
+    text-align: center;
+}
+
+.items{
+    font-style: italic;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagenDiferenciales{
+    width: 50%;
 }
