--- a/html-css/style-estructura.css
+++ b/html-css/style-estructura.css
@@ -10,7 +10,11 @@ body {
     width:100%;
 }
 
-h1{
+.titulo-principal {
+    padding-left: 30px;
+}
+
+.titulo-centralizado{
     text-align: center;
 }
 
@@ -29,10 +33,6 @@ em strong{
 .diferenciales{
     background: #FFFFFF;
     padding: 30px;
-}
-
-h2{
-    text-align: center;
 }
 
 .items{
