--- a/html-css-2/productos.css
+++ b/html-css-2/productos.css
@@ -1,13 +1,24 @@
 header {
     background: #BBBBBB;
+    padding: 20px 0;
 }
 
+.caja {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
 
 nav li {
     display: inline;
     margin: 0 0 0 15px;
 }
-
 
 nav a {
     text-transform: uppercase;
