--- a/html-css-2/style.css
+++ b/html-css-2/style.css
@@ -3,6 +3,10 @@ header {
     padding: 20px 0;
 }
 
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 .caja {
     position: relative;
     width: 940px;
@@ -184,7 +188,20 @@ td, th {
     margin: 0 20px 20px 0;
 }
 
-
 .imagenDiferenciales{
     width: 60%;
+}
+
+.mapa {
+    padding: 3em 0;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.video {
+    width: 560px;
+    margin: 1em auto;
 }
