--- a/html-css-2/style.css
+++ b/html-css-2/style.css
@@ -94,11 +94,6 @@ footer {
     margin: 20px;
 }
 
-main {
-    width: 940px;
-    margin: 0 auto;
-}
-
 form {
     margin: 40px 0;
 }
@@ -188,12 +183,49 @@ td, th {
     margin: 0 20px 20px 0;
 }
 
-.imagenDiferenciales{
+.video {
+    width: 560px;
+    margin: 1em auto;
+}
+
+.diferenciales {
+    padding: 3em 0;
+    background: #888888;
+}
+
+.contenido-diferenciales {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-diferenciales {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.items {
+    line-height: 1.5;
+}
+
+.items:first-child {
+    font-weight: bold;
+}
+
+.imagen-diferenciales {
     width: 60%;
 }
 
-.mapa {
+.mapa-contenido {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.principal {
     padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
 }
 
 .mapa p {
@@ -204,4 +236,13 @@ td, th {
 .video {
     width: 560px;
     margin: 1em auto;
+}
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
+}
+
+.items:before{
+    content:"★"
 }
