Agregar sombras y transiciones en hover

--- a/html-css-2/style.css
+++ b/html-css-2/style.css
@@ -246,3 +246,13 @@ td, th {
 .items:before{
     content:"★"
 }
+
+.imagen-diferenciales{
+    width: 60%;
+    transition: 400ms;
+    box-shadow: 10px 10px 30px 15px #000000;
+}
+
+.imagen-diferenciales:hover{
+    opacity: 0.3;
+}
