Agregar media queries

--- a/html-css-2/style.css
+++ b/html-css-2/style.css
@@ -256,3 +256,18 @@ td, th {
 .imagen-diferenciales:hover{
     opacity: 0.3;
 }
+
+@media screen and (max-width:480px){
+    h1{
+        text-align: center;
+    }
+    nav{
+        position: static;
+    }
+    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video {
+        width: auto;
+    }
+    .lista-diferenciales, .imagen-diferenciales{
+        width: 100%;
+    }
+}
