Agregar flexbox a video y container

--- a/flexbox/css/flexbox.css
+++ b/flexbox/css/flexbox.css
@@ -39,6 +39,23 @@
     width: 23%;
 }
 
+.videoSobre .container {
+    display: flex;
+}
+.videoSobre-sobre {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+
+}
+.videoSobre-video {
+    flex-grow: 2;
+    flex-shrink: 2;
+}
+.videoSobre-sobre-list {
+    flex-grow: 2;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
     .headerPrincipal .container {
@@ -72,5 +89,9 @@
     }
     .rodapePrincipal-contatoForm-fieldset {
         justify-content: center;
+    }
+
+    .videoSobre .container {
+        flex-direction: column;
     }
 }
