--- a/responsive-layouts/css/bases.css
+++ b/responsive-layouts/css/bases.css
@@ -19,10 +19,13 @@
     --fuente-enlace: #0006FF;
     
     --background-footer: #333333;
+
+    --montserrat: 'Montserrat', sans-serif;
+    --open-sans: 'Open Sans', sans-serif;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: var(--montserrat);
 }
 
 .container {
@@ -32,10 +35,11 @@ body {
 
 .boton {
     text-align: center;
-    display: 100%;
+    display: block;
+    width: 100%;
     max-width: 350px;
     box-sizing: border-box;
     padding: 1rem 2rem;
-    border: 1px solid #fff;
+    border: 1px solid var(--boton-rojo);
     border-radius: 5px;
 }
