--- a/responsive-layouts/css/institucional.css
+++ b/responsive-layouts/css/institucional.css
@@ -71,3 +71,13 @@
         display: block;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .institucional__contacto-email {
+        display: inline-block;
+    }
+
+    .institucional__video {
+        width: 100%;
+    }
+}
