--- a/responsive-layouts/css/llamada.css
+++ b/responsive-layouts/css/llamada.css
@@ -45,3 +45,9 @@
         margin-bottom: 2rem;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .llamada__texto {
+        max-width: 600px;
+    }
+}
