--- a/responsive-layouts/css/planes.css
+++ b/responsive-layouts/css/planes.css
@@ -115,3 +115,9 @@
         max-width: 300px;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .tarjetas {
+        max-width: 400px;
+    }
+}
