Finalizar desktop layout con media queries

--- a/responsive-layouts/css/sobre-nosotros.css
+++ b/responsive-layouts/css/sobre-nosotros.css
@@ -25,9 +25,13 @@
     margin-bottom: 1rem;
 }
 
-.sobre-nosotros {
+.sobre-nosotros__texto--destacado {
     color: var(--fuente-ceniza-oscuro);
     font-weight: 700;
+}
+
+.sobre_nosotros__imagen {
+    display: none;
 }
 
 @media screen and (min-width: 1024px) {
@@ -41,11 +45,11 @@
         text-align: left;
     }
     .sobre-nosotros__texto--division {
-        border-bottom: 1px solid var(--cinza-medio);
+        border-bottom: 1px solid var(--background-ceniza-medio);
 
         padding-bottom: 1.5rem;
     }
-    .sobre-nosotros__imagen {
+    .sobre_nosotros__imagen {
         display: block;
     }
 }
