--- a/react/org/src/componentes/Equipo/Equipo.css
+++ b/react/org/src/componentes/Equipo/Equipo.css
@@ -12,3 +12,9 @@
     display: inline-block;
     padding-bottom: 8px;
 }
+
+.colaboradores {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
