--- a/react/org/src/componentes/Equipo/Equipo.css
+++ b/react/org/src/componentes/Equipo/Equipo.css
@@ -3,6 +3,13 @@
     padding: 32px;
     text-align: center;
     font-size: 32px;
+    position: relative;
+}
+
+.input-color {
+    position: absolute;
+    top: 20px;
+    right: 50px;
 }
 
 .equipo h3 {
